11-3-2008: #562, use Piccolo-style tabs, add build dependency on piccolo-phet
11-3-2008: #562, delete local copy of phetcommon classes and image files
11-3-2008: #562, port to phetcommon trunk version of application, model, clock
11-2-2008: #562, too much stuff in top-level package, separate into model and view packages
# 2.04.01 (25456)
10-16/2008: #562, publish 2.04.01 before starting port to phetcommon trunk
10-16-2007: Attempted to fix a memory leak that bogs down the application while zoomed out (seeing the sun)
8-21-2007: Fixed a bug that prevented the splash window from appearing.
8-21-2007: Added Japanese translation
7-20-2007: Changed request frame rate from 50fps to 33fps
7-20-2007: Added paintImmediately on application startup and window focus gained
7-20-2007: Fixed NPE in ApparatusPanel caused by null AffineTransform in paint
7-19-2007: Added dynamic version loading and display
7-19-2007: Reduced photon size by 30%
7-19-2007: Added photon graphics from hydrogen atom simulation
7-16-2007: improved performance of application inner loop