@@ -20,11 +20,11 @@ import edu.colorado.phet.common.phetcommon.application.Module;
 import edu.colorado.phet.common.phetcommon.application.PhetApplication;
 import edu.colorado.phet.common.phetcommon.model.ModelElement;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockEvent;
+import edu.colorado.phet.greenhouse.common.graphics.ApparatusPanel;
+import edu.colorado.phet.greenhouse.common.graphics.CompositeGraphic;
 import edu.colorado.phet.greenhouse.filter.Filter1D;
 import edu.colorado.phet.greenhouse.filter.IrFilter;
 import edu.colorado.phet.greenhouse.model.*;
-import edu.colorado.phet.greenhouse.phetcommon.view.graphics.ApparatusPanel;
-import edu.colorado.phet.greenhouse.phetcommon.view.graphics.CompositeGraphic;
 import edu.colorado.phet.greenhouse.view.*;
 
 
