@@ -11,12 +11,12 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
 
+import edu.colorado.phet.greenhouse.common.graphics.ApparatusPanel;
+import edu.colorado.phet.greenhouse.common.graphics.Graphic;
+import edu.colorado.phet.greenhouse.common.graphics.ImageGraphic;
 import edu.colorado.phet.greenhouse.model.GlassPane;
 import edu.colorado.phet.greenhouse.model.PhotonAbsorber;
 import edu.colorado.phet.greenhouse.model.PhotonEmitter;
-import edu.colorado.phet.greenhouse.phetcommon.view.graphics.ApparatusPanel;
-import edu.colorado.phet.greenhouse.phetcommon.view.graphics.Graphic;
-import edu.colorado.phet.greenhouse.phetcommon.view.graphics.ImageGraphic;
 import edu.colorado.phet.greenhouse.view.GlassPaneGraphic;
 
 public class GlassPaneModule extends BaseGreenhouseModule {
