@@ -1,4 +1,4 @@
-package edu.colorado.phet.greenhouse.phetcommon.view.graphics;
+package edu.colorado.phet.greenhouse.common.graphics;
 
 import java.awt.*;
 
