@@ -4,7 +4,7 @@
  * Author: Another Guy
  * Date: May 21, 2003
  */
-package edu.colorado.phet.greenhouse.phetcommon.view.graphics;
+package edu.colorado.phet.greenhouse.common.graphics;
 
 import java.awt.event.MouseEvent;
 import java.awt.geom.Point2D;
