@@ -24,13 +24,13 @@ import java.util.Map;
 
 import edu.colorado.phet.greenhouse.GreenhouseConfig;
 import edu.colorado.phet.greenhouse.GreenhouseResources;
+import edu.colorado.phet.greenhouse.common.graphics.Animation;
+import edu.colorado.phet.greenhouse.common.graphics.ApparatusPanel;
+import edu.colorado.phet.greenhouse.common.graphics.Graphic;
+import edu.colorado.phet.greenhouse.common.graphics.ImageGraphic;
 import edu.colorado.phet.greenhouse.model.Earth;
 import edu.colorado.phet.greenhouse.model.Photon;
 import edu.colorado.phet.greenhouse.model.ReflectivityAssessor;
-import edu.colorado.phet.greenhouse.phetcommon.view.graphics.Animation;
-import edu.colorado.phet.greenhouse.phetcommon.view.graphics.ApparatusPanel;
-import edu.colorado.phet.greenhouse.phetcommon.view.graphics.Graphic;
-import edu.colorado.phet.greenhouse.phetcommon.view.graphics.ImageGraphic;
 
 /**
  * Quirks:
