@@ -1,3 +1,4 @@
+11-3-2008: #562, move all remaining common graphics files to edu.colorado.phet.greenhouse.common.graphics
 11-3-2008: #562, use Piccolo-style tabs, add build dependency on piccolo-phet
 11-3-2008: #562, delete local copy of phetcommon classes and image files
 11-3-2008: #562, port to phetcommon trunk version of application, model, clock
